# slipumbrella-agentic-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prd.yml  generate_proto.bat
agent/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  readMe.md
agent/configs/: __init__.py  settings.py
agent/core/: context_manager.py  core_agent.py  llm_config.py  observability.py  session_manager.py  spec.py  types.py
agent/core/agent_factory/: factory.py  registry.py  templates.py
agent/core/orchestration/: builder.py  orchestrator.py
agent/db/: __init__.py  checkpoint_storage.py  database.py  history_provider.py
agent/db/repositories/: __init__.py  artifact_repository.py  attachment_repository.py  common.py  embedding_repository.py  evaluation_repository.py  line_message_repository.py  model_repository.py  plan_repository.py  session_repository.py  snapshot_repository.py
agent/grpc/server/: core_agent_grpc.py  server.py  ws_server.py
agent/instruction/: context.md  implementation_plan.md  task.md
agent/prompts/: base_agent.py  builder_agent.py  coder.py  core_agent.py  evaluation.py  line_agent.py  meta_prompt.py  researcher.py
agent/proto/: core_agent.proto
agent/services/: embedding_service.py
agent/services/evaluation/: prompts.py  rag_evaluator.py
agent/services/tools/: academic_tools.py  artifact_context.py  artifact_tools.py  image_tools.py  knowledge_tools.py  line_tools.py  planning_tools.py  prompt_tools.py  web_tools.py
agent/services/tools/gworkspace/: __init__.py  auth.py  (+5 more)
(+277 files in other folders)
